...
        android:id="@+id/image_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ImageView
        android:id="@+id/mood_event_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>
